<!--
  ~ (c) 2016-2020 Swirlds, Inc.
  ~
  ~ This software is owned by Swirlds, Inc., which retains title to the software. This software is protected by various
  ~ intellectual property laws throughout the world, including copyright and patent laws. This software is licensed and
  ~ not sold. You must use this software only in accordance with the terms of the Hashgraph Open Review license at
  ~
  ~ https://github.com/hashgraph/swirlds-open-review/raw/master/LICENSE.md
  ~
  ~ SWIRLDS MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF THIS SOFTWARE, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING BUT NOT LIMITED TO THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
  ~ OR NON-INFRINGEMENT.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- Required Maven Version -->
	<modelVersion>4.0.0</modelVersion>

	<!-- Parent Configuration -->
	<parent>
		<groupId>com.swirlds</groupId>
		<artifactId>swirlds-platform</artifactId>
		<version>0.7.4-alpha.4</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<!-- Project Configuration -->
	<artifactId>swirlds</artifactId>
	<packaging>jar</packaging>

	<!-- Project Properties -->
	<properties>
		<!-- Maven and Java Configuration -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>

		<app.repo>${project.baseUri}../sdk/data/repos/app/</app.repo>
		<maven.javadoc.skip>true</maven.javadoc.skip>
	</properties>

	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-platform-core</artifactId>
			<version>0.7.4-alpha.4</version>
		</dependency>
	</dependencies>

	<!-- Build Configuration -->
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/../sdk/</directory>
				<includes>
					<include>docs/license.html</include>
					<include>docs/acknowledgments.html</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<!-- 2020-06-03 (Nathan): Explicitly left in older version as temporary work around for JPMS issues  -->
				<version>2.3.2</version>
				<!-- the following version puts classpath dir after generated path not before -->
				<!-- <version>3.0.2</version> -->
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.swirlds.platform.Browser</mainClass>
							<addClasspath>true</addClasspath>
							<classpathPrefix>data/lib/</classpathPrefix>
							<useUniqueVersions>false</useUniqueVersions>
						</manifest>
						<manifestEntries>
							<Built-By>Swirlds, Inc.</Built-By>
							<Class-Path>data/</Class-Path>
							<Add-Opens>java.base/sun.security.jca</Add-Opens>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
